java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/UncaughtExceptionTest/testBug123850a-hints.pass
Surround Statement with try-catch
Surround Block with try-catch
